Added functionality that will show all questions user got wrong give correct answer for each question.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <label for="fourth">Option D</label>
           </div>
           <button class="btn" id="submit">Next</button>
+          <div id="answers"></div>
         </div>
       </div>
     </section>
