Created different js file which will store questions only

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </div>
       </div>
     </section>
+    <script src="js/questions.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
